--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 50%, #fecfef 100%);
             font-family: 'Vazirmatn', Tahoma, sans-serif;
             overflow: hidden;
+            touch-action: manipulation; /* بهینه سازی لمس در گوشی */
         }
 
         .container {
@@ -29,9 +30,8 @@
             border-radius: 30px;
             box-shadow: 0 20px 60px rgba(255, 105, 135, 0.3);
             max-width: 90%;
-            width: 500px;
+            width: 450px;
             z-index: 10;
-            transition: all 0.3s ease;
         }
 
         .hearts {
@@ -41,7 +41,6 @@
             width: 100%;
             height: 100%;
             pointer-events: none;
-            overflow: hidden;
             z-index: 1;
         }
 
@@ -50,7 +49,6 @@
             font-size: 20px;
             animation: float 6s ease-in-out infinite;
             opacity: 0.6;
-            user-select: none;
         }
 
         @keyframes float {
@@ -61,24 +59,23 @@
 
         h1 {
             color: #e91e63;
-            font-size: 2.2rem;
+            font-size: 1.8rem;
             font-weight: 900;
             margin-bottom: 30px;
-            text-shadow: 2px 2px 4px rgba(233, 30, 99, 0.1);
         }
 
         .buttons-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 20px;
-            min-height: 200px; /* فضای بیشتر برای بزرگ شدن بله */
+            gap: 15px;
+            min-height: 150px;
             position: relative;
         }
 
         .btn {
-            padding: 15px 40px;
-            font-size: 1.2rem;
+            padding: 12px 35px;
+            font-size: 1.1rem;
             font-weight: 900;
             border: none;
             border-radius: 50px;
@@ -91,39 +88,32 @@
         .btn-yes {
             background: linear-gradient(135deg, #e91e63, #ff6b9d);
             color: white;
-            box-shadow: 0 8px 25px rgba(233, 30, 99, 0.4);
-            z-index: 100; /* همیشه روی بقیه باشد */
-            position: relative;
-        }
-
-        .btn-yes:hover {
-            box-shadow: 0 12px 35px rgba(233, 30, 99, 0.5);
+            z-index: 100;
         }
 
         .btn-no {
             background: #9e9e9e;
             color: white;
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
             position: relative;
             z-index: 5;
         }
 
         .message {
-            position: fixed; /* تغییر به حالت فیکس برای نمایش بهتر وسط صفحه */
-            top: 20%;
+            position: fixed;
+            top: 15%; /* کمی بالاتر در گوشی */
             left: 50%;
             transform: translateX(-50%);
-            background: #333;
+            background: rgba(51, 51, 51, 0.9);
             color: white;
             padding: 10px 20px;
             border-radius: 15px;
-            font-size: 1.1rem;
-            white-space: nowrap;
+            font-size: 1rem;
             opacity: 0;
-            transition: all 0.3s ease;
-            pointer-events: none;
-            font-weight: bold;
+            transition: opacity 0.3s ease;
+            /* راه حل اصلی شما اینجاست: */
+            pointer-events: none; 
             z-index: 200;
+            text-align: center;
         }
 
         .message.show {
@@ -137,62 +127,26 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(255, 255, 255, 0.98);
-            z-index: 1000;
+            background: white;
+            z-index: 2000;
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            animation: fadeIn 0.5s ease;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
+            text-align: center;
+            padding: 20px;
         }
 
         .celebration.show { display: flex; }
 
-        .celebration h1 {
-            color: #e91e63;
-            font-size: 3.5rem;
-            margin-bottom: 15px;
-        }
-
-        .emoji-rain {
-            position: absolute;
-            top: 0; left: 0; width: 100%; height: 100%;
-            pointer-events: none;
-            overflow: hidden;
-        }
-
-        .emoji {
-            position: absolute;
-            font-size: 2.5rem;
-            animation: fall linear forwards;
-        }
-
-        @keyframes fall {
-            to { transform: translateY(100vh) rotate(720deg); }
-        }
-
-        .emoji-couple {
-            font-size: 8rem;
-            animation: bounce 1s ease infinite;
-        }
-
-        @keyframes bounce {
-            0%, 100% { transform: translateY(0); }
-            50% { transform: translateY(-20px); }
-        }
+        .emoji-couple { font-size: 6rem; margin-bottom: 20px; }
     </style>
 </head>
 <body>
     <div class="hearts" id="hearts"></div>
     <div class="message" id="message"></div>
 
-    <div class="container" id="container">
+    <div class="container">
         <h1>با من ازدواج میکنی شما محیا خانوم؟ 🥺</h1>
-        
         <div class="buttons-container">
             <button class="btn btn-yes" id="yesBtn">بله 😍</button>
             <button class="btn btn-no" id="noBtn">نه ☹️</button>
@@ -202,8 +156,8 @@
     <div class="celebration" id="celebration">
         <div class="emoji-rain" id="emojiRain"></div>
         <div class="emoji-couple">👩‍❤️‍👨</div>
-        <h1>لیلیلیلیلی! 🎉</h1>
-        <p style="font-size: 1.8rem; color: #ff6b9d; font-weight: bold;">می‌دونستم بله رو میگی! عاشقتمممم ❤️</p>
+        <h1 style="font-size: 2.5rem;">لیلیلیلیلی! 🎉</h1>
+        <p style="font-size: 1.4rem; color: #ff6b9d; font-weight: bold;">می‌دونستم بله رو میگی! عاشقتمممم ❤️</p>
     </div>
 
     <script>
@@ -211,7 +165,6 @@
         const noBtn = document.getElementById('noBtn');
         const message = document.getElementById('message');
         const celebration = document.getElementById('celebration');
-        const emojiRain = document.getElementById('emojiRain');
         const hearts = document.getElementById('hearts');
 
         const messages = [
@@ -230,42 +183,28 @@
         let messageIndex = 0;
         let messageTimeout;
 
-        function createHearts() {
-            const heartEmojis = ['💖', '💗', '💓', '❤️', '💝'];
-            for (let i = 0; i < 30; i++) {
-                const heart = document.createElement('div');
-                heart.className = 'heart';
-                heart.textContent = heartEmojis[Math.floor(Math.random() * heartEmojis.length)];
-                heart.style.left = Math.random() * 100 + '%';
-                heart.style.animationDelay = Math.random() * 6 + 's';
-                hearts.appendChild(heart);
-            }
-        }
-
-        noBtn.addEventListener('mouseenter', () => {
-            // ۱. بزرگتر کردن دکمه بله به صورت نامحدود!
-            yesScale += 0.35; 
+        // تابع کمکی برای تشخیص لمس یا موس
+        function handleEscape() {
+            yesScale += 0.35;
             yesBtn.style.transform = `scale(${yesScale})`;
-            
-            // اگر خیلی بزرگ شد، لایه رو بیار جلوتر
-            if(yesScale > 2) {
-                yesBtn.style.zIndex = "1000";
-            }
 
-            // ۲. نمایش پیام‌های باحال
             message.textContent = messages[messageIndex];
             message.classList.add('show');
             messageIndex = (messageIndex + 1) % messages.length;
 
             clearTimeout(messageTimeout);
-            messageTimeout = setTimeout(() => {
-                message.classList.remove('show');
-            }, 2000);
+            messageTimeout = setTimeout(() => message.classList.remove('show'), 2000);
 
-            // ۳. فرار کردن دکمه نه
             const x = (Math.random() - 0.5) * (window.innerWidth * 0.7);
             const y = (Math.random() - 0.5) * (window.innerHeight * 0.7);
             noBtn.style.transform = `translate(${x}px, ${y}px)`;
+        }
+
+        // فعال سازی هم برای موس هم برای لمس گوشی
+        noBtn.addEventListener('mouseenter', handleEscape);
+        noBtn.addEventListener('touchstart', (e) => {
+            e.preventDefault(); // جلوگیری از کلیک پیش‌فرض گوشی
+            handleEscape();
         });
 
         yesBtn.addEventListener('click', () => {
@@ -273,22 +212,42 @@
             createEmojiRain();
         });
 
+        function createHearts() {
+            const heartEmojis = ['💖', '❤️', '💝'];
+            for (let i = 0; i < 20; i++) {
+                const heart = document.createElement('div');
+                heart.className = 'heart';
+                heart.textContent = heartEmojis[Math.floor(Math.random() * heartEmojis.length)];
+                heart.style.left = Math.random() * 100 + '%';
+                heart.style.animationDelay = Math.random() * 5 + 's';
+                hearts.appendChild(heart);
+            }
+        }
+
         function createEmojiRain() {
-            const emojis = ['❤️', '✨', '💖', '🍭', '🎉', '🌸', '💍'];
-            for (let i = 0; i < 100; i++) {
+            const emojiRain = document.getElementById('emojiRain');
+            for (let i = 0; i < 80; i++) {
                 setTimeout(() => {
                     const emoji = document.createElement('div');
-                    emoji.className = 'emoji';
-                    emoji.textContent = emojis[Math.floor(Math.random() * emojis.length)];
+                    emoji.style.position = 'absolute';
                     emoji.style.left = Math.random() * 100 + '%';
-                    emoji.style.animationDuration = (Math.random() * 2 + 2) + 's';
-                    emojiRain.appendChild(emoji);
-                    setTimeout(() => emoji.remove(), 4000);
-                }, i * 40);
+                    emoji.style.top = '-50px';
+                    emoji.style.fontSize = '2rem';
+                    emoji.textContent = '❤️';
+                    emoji.style.animation = `fall ${Math.random() * 2 + 2}s linear forwards`;
+                    document.body.appendChild(emoji);
+                    setTimeout(() => emoji.remove(), 3000);
+                }, i * 50);
             }
         }
 
         createHearts();
     </script>
+
+    <style>
+        @keyframes fall {
+            to { transform: translateY(100vh) rotate(360deg); }
+        }
+    </style>
 </body>
 </html>
