--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 50%, #fecfef 100%);
             font-family: 'Vazirmatn', Tahoma, sans-serif;
             overflow: hidden;
-            touch-action: none;
+            touch-action: none; /* جلوگیری از اسکرول و زوم برای فرار بهتر دکمه */
         }
 
         .container {
@@ -33,6 +33,7 @@
             width: 90%;
             max-width: 400px;
             z-index: 10;
+            position: relative;
         }
 
         .hearts {
@@ -67,7 +68,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 120px;
+            min-height: 100px;
             gap: 20px;
         }
 
@@ -85,19 +86,16 @@
         .btn-yes {
             background: linear-gradient(135deg, #e91e63, #ff6b9d);
             color: white;
-            z-index: 1000; /* بله همیشه بالاترین لایه باشد */
+            z-index: 100;
             position: relative;
         }
 
         .btn-no {
             background: #9e9e9e;
             color: white;
-            position: fixed; /* تغییر به حالت فیکس برای فرار آزادانه */
-            z-index: 500;
-            /* موقعیت اولیه پایین بله قرار بگیرد */
-            top: 60%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            position: absolute; /* برای اینکه راحت‌تر فرار کنه */
+            z-index: 50;
+            right: 30px; /* موقعیت اولیه */
         }
 
         .message {
@@ -111,8 +109,8 @@
             border-radius: 12px;
             font-size: 1rem;
             opacity: 0;
-            pointer-events: none;
-            z-index: 2000;
+            pointer-events: none; /* این خط خیلی مهم است */
+            z-index: 1000;
             transition: opacity 0.3s;
             width: 80%;
             text-align: center;
@@ -125,7 +123,7 @@
             position: fixed;
             inset: 0;
             background: white;
-            z-index: 3000;
+            z-index: 2000;
             flex-direction: column;
             justify-content: center;
             align-items: center;
@@ -139,7 +137,7 @@
     <div class="hearts" id="hearts"></div>
     <div class="message" id="message"></div>
 
-    <div class="container">
+    <div class="container" id="mainContainer">
         <h1>با من ازدواج میکنی شما محیا خانوم؟ 🥺</h1>
         <div class="buttons-container">
             <button class="btn btn-yes" id="yesBtn">بله 😍</button>
@@ -150,7 +148,7 @@
     <div class="celebration" id="celebration">
         <div id="emojiRain"></div>
         <div style="font-size: 6rem;">👩‍❤️‍👨</div>
-        <h1 style="font-size: 2.5rem; color: #e91e63;">لیلیلیلیلی! 🎉</h1>
+        <h1 style="font-size: 2.5rem;">لیلیلیلیلی! 🎉</h1>
         <p style="font-size: 1.5rem; color: #ff6b9d; font-weight: bold; padding: 20px;">می‌دونستم بله رو میگی! عاشقتمممم ❤️</p>
     </div>
 
@@ -166,7 +164,7 @@
         let messageIndex = 0;
 
         function moveNoButton(e) {
-            if(e) e.preventDefault();
+            if(e) e.preventDefault(); // جلوگیری از کلیک ناخواسته در موبایل
 
             // ۱. بزرگ کردن دکمه بله
             yesScale += 0.4;
@@ -178,34 +176,20 @@
             messageIndex = (messageIndex + 1) % messages.length;
             setTimeout(() => message.classList.remove('show'), 2000);
 
-            // ۳. پیدا کردن موقعیت دکمه بله (برای اینکه روی آن نرویم)
-            const yesRect = yesBtn.getBoundingClientRect();
+            // ۳. جابجایی دکمه نه به مختصات کاملا تصادفی در کل صفحه
+            const padding = 50;
+            const maxX = window.innerWidth - noBtn.offsetWidth - padding;
+            const maxY = window.innerHeight - noBtn.offsetHeight - padding;
             
-            let randomX, randomY;
-            let overlap = true;
+            const randomX = Math.max(padding, Math.floor(Math.random() * maxX));
+            const randomY = Math.max(padding, Math.floor(Math.random() * maxY));
 
-            // ۴. الگوریتم پیدا کردن جای جدید (تا وقتی جای امن پیدا نشه تکرار می‌کنه)
-            while (overlap) {
-                randomX = Math.random() * (window.innerWidth - 100) + 50;
-                randomY = Math.random() * (window.innerHeight - 100) + 50;
-
-                // چک کردن اینکه آیا با محدوده دکمه بله تداخل دارد یا خیر
-                const safeMargin = 40; // فاصله اطمینان از دکمه بله
-                if (
-                    randomX < yesRect.left - safeMargin || 
-                    randomX > yesRect.right + safeMargin ||
-                    randomY < yesRect.top - safeMargin || 
-                    randomY > yesRect.bottom + safeMargin
-                ) {
-                    overlap = false;
-                }
-            }
-
+            noBtn.style.position = 'fixed';
             noBtn.style.left = randomX + 'px';
             noBtn.style.top = randomY + 'px';
-            noBtn.style.transform = 'translate(-50%, -50%)';
         }
 
+        // رویدادها
         noBtn.addEventListener('mouseenter', moveNoButton);
         noBtn.addEventListener('touchstart', moveNoButton, {passive: false});
 
@@ -214,6 +198,7 @@
             createRain();
         });
 
+        // ساخت قلب‌های پس‌زمینه
         function createHearts() {
             const heartsContainer = document.getElementById('hearts');
             for (let i = 0; i < 20; i++) {
@@ -222,6 +207,7 @@
                 h.textContent = '❤️';
                 h.style.left = Math.random() * 100 + '%';
                 h.style.animationDelay = Math.random() * 5 + 's';
+                h.style.fontSize = (Math.random() * 20 + 10) + 'px';
                 heartsContainer.appendChild(h);
             }
         }
@@ -235,7 +221,7 @@
                     e.style.left = Math.random() * 100 + 'vw';
                     e.style.top = '-50px';
                     e.style.fontSize = '2rem';
-                    e.style.zIndex = '4000';
+                    e.style.zIndex = '3000';
                     e.style.animation = `fallDown ${Math.random() * 2 + 2}s linear forwards`;
                     document.body.appendChild(e);
                 }, i * 50);
@@ -243,7 +229,7 @@
         }
 
         const style = document.createElement('style');
-        style.innerHTML = `@keyframes fallDown { to { transform: translateY(110vh); } }`;
+        style.innerHTML = `@keyframes fallDown { to { transform: translateY(110vh) rotate(360deg); } }`;
         document.head.appendChild(style);
 
         createHearts();
