--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="message" id="message"></div>
 
     <div class="container" id="mainContainer">
-        <h1>با من ازدواج میکنی شما محیا خانوم؟ 🥺</h1>
+        <h1> will you be my valentine? محیا خانوم؟ 🥺</h1>
         <div class="buttons-container">
             <button class="btn btn-yes" id="yesBtn">بله 😍</button>
             <button class="btn btn-no" id="noBtn">نه ☹️</button>
@@ -236,3 +236,4 @@
     </script>
 </body>
 </html>
+
